Added pomo functionality

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <body> 
     <div class="container"> 
-      <h1 id="phase">Type !focus to start.</h1> 
+      <h1 id="phase">Type !timer start</h1> 
       <div id="time" class="digit">00:00:00</div>
     </div> 
 
